fixed reload on Show page, fixed zoom spacing on Index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -312,6 +312,7 @@
   display: flex;
   padding: 20px;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .list-body {
